# PokerGame

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Deck.hpp  Player.hpp  PokerGame.cpp  PokerGame.hpp
lib/errors/: Error.cpp  Error.hpp
